--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build:
       context: .
       dockerfile: node.dockerfile
-    image: ECR_REPO_URL:latest
+    #image: ECR_REPO_URL:latest
     ports:
       - '3000:3000'
